--- a/styles/global.css
+++ b/styles/global.css
@@ -14,10 +14,16 @@
 }
 
 html, body {
-height:100%
+height:100%;
+background-color: rgb(30 41 59);
 }
 
 #__next {
-background-color: rgb(30 41 59);
 height: 100%;
+}
+
+.datepicker {
+    -webkit-appearance: none;
+    text-align: center;
+    text-align: -webkit-center;
 }
